[api++]: completed parking spot module
