# api/src/modules/parking-spot/dto/update-parking-spot.dto.ts
@@ -1,0 +1,4 @@
+export class UpdateParkingSpotDto {
+  spotNumber?: string;
+  isOccupied?: boolean;
+}
